--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
