--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "^15.2.2",
     "markdown-it": "^14.0.0",
     "next": "14.1.3",
+    "nextjs-toploader": "^1.6.6",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "react": "^18",
