--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
