--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "usehooks-ts": "^3.0.2"
   }
 }
