--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,18 @@
   "extends": [
     "next/core-web-vitals",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "no-restricted-imports": [
+      "error",
+      {
+        "paths": [
+          {
+            "name": "next/image",
+            "message": "Please use @/app/(ui)/Image instead."
+          }
+        ]
+      }
+    ]
+  }
 }
