--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -29,7 +30,7 @@
     "lint-staged": "^15.2.2",
     "markdown-it": "^14.0.0",
     "next": "14.1.3",
-    "nextjs-toploader": "^1.6.6",
+    "nprogress": "^0.2.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "react": "^18",
