--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/markdown-it": "^13.0.7",
+    "@types/markdown-it-container": "^2.0.9",
+    "@types/markdown-it-footnote": "^3.0.4",
+    "@types/markdown-it-highlightjs": "^3.3.4",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
@@ -29,6 +32,13 @@
     "lemmy-js-client": "^0.19.4-alpha.7",
     "lint-staged": "^15.2.2",
     "markdown-it": "^14.0.0",
+    "markdown-it-bidi": "^0.1.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-ruby": "^0.1.1",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
     "next": "14.1.3",
     "nprogress": "^0.2.0",
     "postcss": "^8",
