--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "nprogress": "^0.2.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-classnames": "^0.6.3",
+    "prettier-plugin-merge": "^0.6.0",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
